# rust-pow

./: Cargo.toml  README.md  rust-toolchain.toml
benches/: bench.rs
criterion-report-haswell/pow(0, 31)/pow_alt/new/: estimates.json
criterion-report-haswell/pow(0, 31)/pow_alt/report/: index.html
criterion-report-haswell/pow(0, 31)/pow_alt_012opt/base/: estimates.json  tukey.json
criterion-report-haswell/pow(0, 31)/pow_alt_012opt/change/: estimates.json
criterion-report-haswell/pow(0, 31)/pow_alt_012opt/new/: benchmark.json
criterion-report-haswell/pow(0, 31)/pow_alt_012opt/report/: index.html
criterion-report-haswell/pow(0, 31)/pow_alt_01opt/base/: raw.csv
criterion-report-haswell/pow(0, 31)/pow_alt_2opt/new/: benchmark.json  estimates.json  tukey.json
criterion-report-haswell/pow(0, 31)/pow_alt_2opt_inline/base/: tukey.json
criterion-report-haswell/pow(0, 31)/pow_alt_2opt_inline/new/: raw.csv
criterion-report-haswell/pow(0, 31)/pow_alt_2opt_inline/report/: index.html
criterion-report-haswell/pow(4, 7)/report/: index.html
criterion-report-haswell/pow(7, 11)/report/: index.html
criterion-report-haswell/report/: index.html
criterion-report-i586/pow(1, 31)/report/: index.html
criterion-report-i586/pow(2, 31)/report/: index.html
criterion-report-ryzen9/pow(3, 18)/report/: index.html
criterion-report-ryzen9/report/: index.html
criterion-report/pow(0, 31)/report/: index.html
criterion-report/pow(3, 0..18)/report/: index.html
criterion-report/pow(3, 7)/report/: index.html
src/: lib.rs  main.rs
tests/: tests.rs
(+1578 files in other folders)
