[package]
name = "pow"
version = "0.1.0"
authors = ["Bart Massey <bart.massey@gmail.com>"]
edition = "2018"

[dev-dependencies.criterion]
version = "0.3"
features = ["html_reports"]

[dev-dependencies]
criterion-perf-events = "0.1"
perfcnt = "0.7"

[[bench]]
name = "bench"
harness = false

[profile.release]
opt-level=3
lto=true
codegen-units=1
