[package]
name = "pow"
version = "0.1.0"
authors = ["Bart Massey <bart.massey@gmail.com>"]
edition = "2018"

[dev-dependencies.criterion]
version = "0.3"
features = ["html_reports"]

[dependencies.criterion-perf-events]
version = "0.1"
optional = true

[dependencies.perfcnt]
version = "0.7"
optional = true

[[bench]]
name = "bench"
harness = false

[features]
count-cycles = ["criterion-perf-events", "perfcnt"]

[profile.release]
opt-level=3
lto=true
codegen-units=1
